hphp/hack/test/typecheck/inout/bad_inout_use_assign3.php.exp
File "bad_inout_use_assign3.php", line 9, characters 10-16:
Invalid assignment to an inout parameter (Typing[4110])
File "bad_inout_use_assign3.php", line 7, characters 18-23:
This is a string (inout parameter)
File "bad_inout_use_assign3.php", line 9, characters 10-16:
It is incompatible with a float
